# python_fastapi

./: .env  .gitignore  Dockerfile  Dockerfile-celery  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 027e46c7265a_avatar_field.py  08311e690034_prefetch_posts_users.py  2b2cfd0520a6_second_migration.py  9174b9d42ddc_avatar_field.py  a3926e179f42_second_migration.py  b90762fd097e_password_users.py
api/api_v1/: api.py  deps.py
api/api_v1/endpoints/: oauth2.py  posts.py  users.py
core/: __init__.py  celery.py  settings.py
models/: __init__.py  base.py  posts.py  users.py
repositories/: base.py  posts.py  users.py
schemas/: posts.py  users.py
services/: base.py  posts.py  users.py
