[tool.poetry]
name = "python_fastapi"
version = "0.1.0"
description = ""
authors = ["Damir Kuzovatov <kuz.damir.01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.7.5"
anyio = "^3.5.0"
asgiref = "^3.4.1"
asyncpg = "^0.25.0"
certifi = "^2021.10.8"
charset-normalizer = "^2.0.10"
click = "^8.0.3"
dnspython = "^2.2.0"
email-validator = "^1.1.3"
fastapi = "^0.72.0"
greenlet = "^1.1.2"
h11 = "^0.12.0"
httptools = "^0.3.0"
idna = "^3.3"
importlib-metadata = "^4.10.1"
importlib-resources = "^5.4.0"
itsdangerous = "^2.0.1"
Jinja2 = "^3.0.3"
Mako = "^1.1.6"
MarkupSafe = "^2.0.1"
orjson = "^3.6.5"
passlib = "^1.7.4"
psycopg2 = "^2.9.3"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"
python-multipart = "^0.0.5"
PyYAML = "^6.0"
requests = "^2.27.1"
six = "^1.16.0"
sniffio = "^1.2.0"
SQLAlchemy = "^1.4.29"
starlette = "^0.17.1"
typing-extensions = "^4.0.1"
ujson = "^5.1.0"
urllib3 = "^1.26.8"
uvicorn = "^0.17.0"
uvloop = "^0.16.0"
watchgod = "^0.7"
websockets = "^10.1"
zipp = "^3.7.0"
bcrypt = "^3.2.0"
PyJWT = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
